// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #d1d9e8;
  border: solid 1px transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                Async Label :
                <span>
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-7"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #d1d9e8;
  border: solid 1px transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                Async Label :
                <span>
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-7"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-2:hover>span,
.emotion-2:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-2:hover>div,
.emotion-2:active>div {
  background-color: #d1d9e8;
  border: solid 1px transparent;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                >
                  you can change me :
                  <span>
                    Peach
                  </span>
                </span>
              </span>
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #c399ff;
  border: solid 1px transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-11:hover>span,
.emotion-11:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-11:hover>div,
.emotion-11:active>div {
  background-color: #d20000;
  border: solid 1px #d20000;
}

.emotion-12 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #9f0000;
  border: solid 1px #6a0000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-17 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-17 path {
  fill: #fff;
}

.emotion-18 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
  -webkit-filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.15));
  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.15));
}

.emotion-19 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-19:hover>span,
.emotion-19:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-19:hover>div,
.emotion-19:active>div {
  background-color: #5d5d5d;
  border: solid 1px transparent;
}

.emotion-20 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #fff;
  background-color: #767676;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-27 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-27:hover>span,
.emotion-27:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-27:hover>div,
.emotion-27:active>div {
  background-color: #ea9cc2;
  border: solid 1px transparent;
}

.emotion-28 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #fefefe;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-12"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-17"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-18"
          >
            <button
              className="emotion-19"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-20"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-17"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-27"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-28"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #d1d9e8;
  border: solid 1px transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-11:hover>span,
.emotion-11:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-11:hover>div,
.emotion-11:active>div {
  background-color: #d1d9e8;
  border: solid 1px #d1d9e8;
}

.emotion-12 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px #b6b7ba;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-18 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
  -webkit-filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.15));
  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.15));
}

.emotion-28 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #fefefe;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-36 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-36:hover>span,
.emotion-36:active>span {
  background-color: transparent;
  border-top: solid 1px transparent;
  border-bottom: solid 1px transparent;
}

.emotion-36:hover>div,
.emotion-36:active>div {
  background-color: #c399ff;
  border: solid 1px transparent;
}

.emotion-37 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-43 {
  height: 100%;
  width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: transparent;
  border-top: solid 1px transparent;
  border-bottom: solid 1px transparent;
}

.emotion-44 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-left: 0!important;
  padding-right: 1rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-46 {
  fill: #676767;
  width: 1.1875rem;
  height: 1.1875rem;
}

.emotion-46 path {
  fill: #676767;
}

.emotion-48 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-48:hover>span,
.emotion-48:active>span {
  background-color: transparent;
  border-top: solid 1px transparent;
  border-bottom: solid 1px transparent;
}

.emotion-48:hover>div,
.emotion-48:active>div {
  background-color: #c399ff;
  border: solid 1px #c399ff;
}

.emotion-49 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px #c399ff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-55 {
  height: 100%;
  width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: transparent;
  border-top: solid 1px #c399ff;
  border-bottom: solid 1px #c399ff;
}

.emotion-56 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px #c399ff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-left: 0!important;
  padding-right: 1rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <h2>
    Preset
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-12"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-18"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-28"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Added
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-36"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-37"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-43"
              />
              <div
                className="emotion-44"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-46"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-48"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-49"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-55"
              />
              <div
                className="emotion-56"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-46"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-18"
          >
            <button
              className="emotion-36"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-37"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <span
                className="emotion-43"
              />
              <div
                className="emotion-44"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-46"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-3:hover>span,
.emotion-3:active>span {
  border-top: solid 1px undefined;
  border-bottom: solid 1px undefined;
}

.emotion-3:hover>div,
.emotion-3:active>div {
  background-color: #d1d9e8;
  border: solid 1px transparent;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
